# DSL-KeyPad-rs

./: .editorconfig  .gitignore  Cargo.toml  REUSE.toml  package-lock.json  package.json  plan.drawio  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
app/core/: Cargo.toml
app/core/src/: lib.rs
app/core/src/domain/: mod.rs
app/core/src/domain/entities/: character_entity.rs  mod.rs
app/core/src/domain/entities/character/: mod.rs  structs.rs
app/core/src/domain/entities/character_entity/: enums.rs  impls.rs  mod.rs  structs.rs
app/core/src/domain/entities/input/: enums.rs  impls.rs  structs.rs
app/core/src/domain/instances/: character_storage.rs  mod.rs
app/core/src/domain/storages/: character_storage.rs
app/core/src/domain/taxonomy/: mod.rs
app/core/src/domain/taxonomy/taxon/: enums.rs  impls.rs  mod.rs  structs.rs
app/core/src/domain/taxonomy/taxons_tree/: mod.rs
app/launcher/: Cargo.toml
app/protocol/: Cargo.toml
app/protocol/src/: lib.rs
app/ui/: Cargo.toml  build.rs
app/ui/src/: lib.rs
assets/: meta.yml
assets/web/: App.vue  index.html  main.ts  shims-vue.d.ts
assets/web/router/: index.ts
assets/web/windows/main/: Window.vue
assets/web/windows/settings/: Window.vue
assets/web/windows/tooltip/: Window.vue
docs/: release.drawio
web/src/: dummy.html
web/src/styles/: index.scss
web/src/windows/main/: index.ts
