[workspace]
members = ["app/core", "app/launcher", "app/protocol", "app/ui"]
resolver = "2"

[workspace.dependencies]
kp-core = { path = "app/core", version = "0.1.0" }
kp-ui = { path = "app/ui", version = "0.1.0" }
kp-protocol = { path = "app/protocol", version = "0.1.0" }

tauri = "2.10.1"
# tokio = { version = "1.49.0", features = ["full"] }
strum = "0.27.2"
strum_macros = "0.27.2"
wry = "0.54.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tao = "0.34.5"
mime_guess = "2.0"
serde = "1.0"
serde_json = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
collapsible_if = "warn"
