[workspace]
members = ["app/core", "app/launcher", "app/protocol", "app/ui"]
resolver = "2"

[workspace.dependencies]
kp-core = { path = "app/core", version = "0.1.0" }
kp-ui = { path = "app/ui", version = "0.1.0" }
kp-protocol = { path = "app/protocol", version = "0.1.0" }

tauri = "2.10.1"
# tokio = { version = "1.49.0", features = ["full"] }
strum = "0.27.2"
strum_macros = "0.27.2"
wry = "0.54.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tao = "0.34.5"
mime_guess = "2.0"
serde = "1.0"
serde_json = "1.0"

# Windows Keyboard Hook Dependencies
winapi = { version = "0.3", features = [
  "winuser",
  "shellapi",
  "combaseapi",
  "shobjidl_core",
] }

#  Cross-Platform Keyboard Hook Dependencies
rdev = "0.5.0"

# Linux Keyboard Hook Dependencies
evdev-rs = "0.6.3"

# MacOS Keyboard Hook Dependencies
cocoa = "0.26.1"
core-graphics = "0.25.0"
core-foundation = "0.9.3"


copypasta = "0.10.2"
directories = "6.0.0"
anyhow = "1.0"

thiserror = "2.0.18"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
collapsible_if = "warn"
