[workspace]
members = ["app/*"]
resolver = "2"

[workspace.metadata]
status = "α"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Yalla Nkardaz"]
license = "MIT"
# categories = [""]
keywords = ["DSL KeyPad", "hotkeys", "unicode", "languages-input"]
homepage = "https://github.com/DemerNkardaz/DSL-KeyPad-rs"
repository = "https://github.com/DemerNkardaz/DSL-KeyPad-rs"

[workspace.dependencies]
# Local Workspace Packages
kp-core = { path = "app/core", version = "0.1.0" }
kp-ui = { path = "app/ui", version = "0.1.0" }
kp-protocol = { path = "app/protocol", version = "0.1.0" }

# Error Handling
anyhow = "1.0.101"
thiserror = "2.0.18"

# UI and Desktop Framework (Tauri)
tauri = "2.10.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tao = "0.34.5"
wry = "0.54.1"
# tokio = { version = "1.49.0", features = ["full"] }

# OS Integration and Hooks
rdev = "0.5.0"
copypasta = "0.10.2"
directories = "6.0.0"
dotenv = "0.15"
winapi = { version = "0.3", features = [
  "winuser",
  "shellapi",
  "combaseapi",
  "shobjidl_core",
] }

# Unicode and Text Processing
icu = "2.1.1"
mime_guess = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Code Generation and Enums
strum = "0.27.2"
strum_macros = "0.27.2"

# Memory and Data Structures
smallvec = "1.15.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
collapsible_if = "warn"
