[package]
name = "kp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri.workspace = true
# tokio.workspace = true
strum.workspace = true
strum_macros.workspace = true
wry.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tao.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true


winapi.workspace = true
rdev.workspace = true
evdev-rs.workspace = true

[lints]
workspace = true
