[package]
name = "kp-core"
description = "Main core of DSL KeyPad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
# categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata]
status.workspace = true

[dependencies]
lacon-core.workspace = true

tauri.workspace = true
# tokio.workspace = true
strum.workspace = true
strum_macros.workspace = true
wry.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tao.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true


winapi.workspace = true
rdev.workspace = true
# evdev-rs.workspace = true

[lints]
workspace = true
