[package]
name = "kp-launcher"
description = "Executable of DSL KeyPad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
# categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kp-core.workspace = true
kp-ui.workspace = true
kp-protocol.workspace = true

[lints]
workspace = true
