[package]
name = "kp-protocol"
description = "Protocol realization for interacting with WebUI of DSL KeyPad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
# categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata]
status.workspace = true

[dependencies]

[lints]
workspace = true
