[package]
name = "kp-ui"
description = "WebUI realization of DSL KeyPad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
# categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dotenv.workspace = true

[build-dependencies]
dotenv.workspace = true

[lints]
workspace = true
